wrong background colour fix numbeer 2

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body, html {
     position: relative;
     width: 100%;
     height: 100%;
-    background-color: #2d2c2c;
+    
 }
 
 canvas {
